@@ -152,7 +152,7 @@ To add a missing function, read: doc/How_to_add_a_missing_function.md
 * ERROR.TYPE -- Returns a number corresponding to an error type
 * INFO -- Returns information about the current operating environment
 * ISBLANK -- Returns TRUE if the value is blank -- _R_ _C_
-* ISERR -- Returns TRUE if the value is any error value except ##N/A
+* ISERR -- Returns TRUE if the value is any error value except ##N/A -- _R_ 
 * ISERROR -- Returns TRUE if the value is any error value
 * ISEVEN -- Returns TRUE if the number is even
 * ISLOGICAL -- Returns TRUE if the value is a logical value
